Your commit message here

--- a/briandev-main/src/pages/lwd.mdx
+++ b/briandev-main/src/pages/lwd.mdx
@@ -5,9 +5,9 @@ import {Bookmark} from '@/components/Bookmark'
 import {ImageGallery} from '@/components/Gallery'
 
 export const meta = {
-  author: 'Brian Ketelsen',
-  date: '2022-09-05',
-  title: 'Liam',
+  author: 'Baker Lawzi',
+  date: '2024-2-16',
+  title: 'Baker Lawzi',
   intro: 'Craniosynostosis & Muenke Syndrome',
   description:
     'Liam [Neeson] Walker [Texas Ranger] Ketelsen',
